--- a/src/components/Search/Search.style.scss
+++ b/src/components/Search/Search.style.scss
@@ -133,13 +133,16 @@
 @media (min-width: 789px) {
   .form--container {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     padding-left: 0;
 
     .icon--input--wrapper {
       display: flex;
       align-items: center;
       padding-left: 1em;
+      &:nth-child(2) {
+        padding-left: 0;
+      }
       input {
         border-right: 1px $grey solid;
         text-align: left;
@@ -148,7 +151,6 @@
       }
     }
     .checkbox--label--wrapper {
-      padding-left: 1em;
       display: flex;
       align-items: center;
       .checkbox {
@@ -160,6 +162,16 @@
         padding: 0.7em;
         font-weight: bold;
       }
+    }
+
+    button {
+      background-color: $violet;
+      color: $pureWhite;
+
+      border: none;
+      border-radius: 6px;
+      padding: 1em;
+      font-weight: bold;
     }
   }
 }
